--- a/static/launcher.css
+++ b/static/launcher.css
@@ -1,56 +1,41 @@
-.slidecontainer {
-  width: 100%;
+
+#header {
+ background-image: url("header.png");
+ background-size: cover;
+ background-repeat: no-repeat;
+ height: 65px;
 }
 
-.slider {
-  -webkit-appearance: none;
-  width: 100%;
-  height: 25px;
-  background: #d3d3d3;
-  outline: none;
-  opacity: 0.7;
-  -webkit-transition: .2s;
-  transition: opacity .2s;
+#header_text {
+    font-size: 30px;
+    font-weight: bold;
+    color: white;
+    line-height: 65px;
 }
 
-.slider:hover {
-  opacity: 1;
+#user_text {
+    font-size: 20px;
+    color: white;
+    line-height: 65px;
+    text-align: right;
+    padding-right: 50px;
 }
 
-.slider::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  appearance: none;
-  width: 25px;
-  height: 25px;
-  background: #4CAF50;
-  cursor: pointer;
+#new_container_loader {
+    text-align: center;
+    position: absolute;
+    top: 25%;
+    left: 70%;
 }
 
-.slider::-moz-range-thumb {
-  width: 25px;
-  height: 25px;
-  background: #4CAF50;
-  cursor: pointer;
+.fa {
+  padding : 10px;
 }
 
-#container {
-  margin: auto;
-  width: 50%;
-  padding: 10px;
+.dropdown-menu {
+  line-height: 20px;
 }
 
-#submit_button {
-  margin: 20px;
-}
-
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-table {
-  font-size: 1em;
-}
-
-.ui-draggable, .ui-droppable {
-  background-position: top;
+#login_menu {
+  padding: 50px;
 }
