--- a/templates/launcher.html
+++ b/templates/launcher.html
@@ -1,17 +1,15 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>DSR Launcher</title>
-  <link rel="stylesheet" href="{{url_for('static', filename='jquery-ui.css')}}">
-  <link rel="stylesheet" href="{{url_for('static', filename='bootstrap.min.css')}}">
-  <link rel="stylesheet" href="{{url_for('static', filename='launcher.css')}}">
-</head>
-<body>
-  <h1> Logged in as {{session.username}}</h1>
-  <button id="reset_button">Reset</button>
-  <a href="/logout" id="logout_button">Log out</a><p>
+{% extends "layout.html" %}
+{% block title %}MapR DSR Manager{% endblock %}
+{% block username %}
+  <span class="dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    {{session.username}}
+  </span>
+  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+    <a class="dropdown-item" href="/logout">Logout</a>
+    <a class="dropdown-item" id="reset_button" href="#">Reset</a>
+  </div>
+{% endblock %}
+{% block content %}
   {% for container in active_containers %}
   <div>
     <a class="container_link" target="_blank" data-port="{{container.port}}" onclick="javascript:event.target.port={{container.port}}">{{container._id}}</a>
@@ -29,36 +27,28 @@
   <!-- Trigger the modal with a button -->
   <button type="button" class="btn btn-sm" data-toggle="modal" data-target="#new_container_modal">Launch new DSR</button>
 
+  <!-- Modal -->
+  <div id="new_container_modal" class="modal fade" role="dialog">
+    <div class="modal-dialog">
 
-</div>
-
-
-
-<!-- Modal -->
-<div id="new_container_modal" class="modal fade" role="dialog">
-  <div class="modal-dialog">
-
-    <!-- Modal content-->
-    <div class="modal-content">
-      <div class="modal-header">
-        <h4 class="modal-title">Launch new DSR instance</h4>
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
-      </div>
-      <div class="modal-body">
-          Please provide new DSR credentials :<p>
-          Username :<input type="username" id="container_username" placeholder="Username"><p>
-          Password : <input type="password" id="container_password" placeholder="Password"><p>
-          <hr>
-          <button id="new_container_button">Launch</button>
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4 class="modal-title">Launch new DSR instance</h4>
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+        </div>
+        <div class="modal-body">
+            Please provide new DSR credentials :<p>
+            Username :<input type="username" id="container_username" placeholder="Username"><p>
+            Password : <input type="password" id="container_password" placeholder="Password"><p>
+            <hr>
+            <button id="new_container_button">Launch</button>
+            <div id="new_container_loader" style="display:none">
+              <i class="fa fa-cog fa-spin fa-3x fa-fw"></i>
+            </div>
+        </div>
       </div>
     </div>
-
   </div>
-</div>
 
-</body>
-  <script type="text/javascript" src="{{url_for('static', filename='jquery-3.3.1.min.js')}}"></script>
-  <script type="text/javascript" src="{{url_for('static', filename='jquery-ui.js')}}"></script>
-  <script type="text/javascript" src="{{url_for('static', filename='bootstrap.min.js')}}"></script>
-  <script type="text/javascript" src="{{url_for('static', filename='launcher.js')}}"></script>
-</html>
+{% endblock %}
