--- a/templates/launcher.html
+++ b/templates/launcher.html
@@ -9,8 +9,10 @@
   <link rel="stylesheet" href="{{url_for('static', filename='launcher.css')}}">
 </head>
 <body>
+  <h1> Logged in as {{session.username}}</h1>
+  <button id="reset_button">Reset</button>
+  <a href="/logout" id="logout_button">Log out</a><p>
   {% for container in active_containers %}
-  {{container}}
   <div>
     <a class="container_link" target="_blank" data-port="{{container.port}}" onclick="javascript:event.target.port={{container.port}}">{{container._id}}</a>
     <span class="container_status" data-container="{{container._id}}">{{container.status}}</span> 
@@ -24,9 +26,36 @@
   {% endfor %}
 
   <p><p><p>
-  <button id="new_container_button">New Container</button>
+  <!-- Trigger the modal with a button -->
+  <button type="button" class="btn btn-sm" data-toggle="modal" data-target="#new_container_modal">Launch new DSR</button>
+
 
 </div>
+
+
+
+<!-- Modal -->
+<div id="new_container_modal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title">Launch new DSR instance</h4>
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+      </div>
+      <div class="modal-body">
+          Please provide new DSR credentials :<p>
+          Username :<input type="username" id="container_username" placeholder="Username"><p>
+          Password : <input type="password" id="container_password" placeholder="Password"><p>
+          <hr>
+          <button id="new_container_button">Launch</button>
+      </div>
+    </div>
+
+  </div>
+</div>
+
 </body>
   <script type="text/javascript" src="{{url_for('static', filename='jquery-3.3.1.min.js')}}"></script>
   <script type="text/javascript" src="{{url_for('static', filename='jquery-ui.js')}}"></script>
