--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,12 +12,12 @@
   {% endblock %}
   </head>
   <body>
-    <div class="container-fluid">
+    <div class="container-fluid bg">
       <div id="header" class="row">
-        <div id="header_text" class="col-md-10">
+        <div id="header_text" class="col-md-9">
           <div class="text-right align-middle">MapR DataScience Refinery Manager</div>
         </div>
-        <div class="col-md-2" id="user_text">
+        <div class="col-md-3" id="user_text">
           <i class="fa fa-user" aria-hidden="true"></i>{% block username %}{% endblock %}
         </div>
       </div>
