--- a/static/launcher.css
+++ b/static/launcher.css
@@ -18,14 +18,15 @@
     color: white;
     line-height: 65px;
     text-align: right;
-    padding-right: 50px;
+    padding-right: 10px;
 }
 
 #new_container_loader {
     text-align: center;
     position: absolute;
-    top: 25%;
-    left: 70%;
+    top: 0%;
+    left: 77%;
+    color: silver;
 }
 
 .fa {
@@ -38,4 +39,36 @@
 
 #login_menu {
   padding: 50px;
+}
+
+.action_button {
+  width: 120px;
+  height: 38px;
+  padding: unset;
+}
+
+body, html {
+  height: 100%;
+}
+
+.bg { 
+  /* The image used */
+  background-image: url("/static/background.jpg");
+
+  /* Full height */
+  height: 100%;
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.table {
+  background-color: white;
+  margin-bottom: 0px;
+}
+
+#over_launch_hr {
+  margin-top: 0px; 
 }
